--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="container principal">
         <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="assets/Combo.png" alt="o combo +" class="container__imagem">
+            <img src="./assets/Combo.png" alt="o combo +" class="container__imagem">
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao__secundario"> Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
@@ -23,7 +23,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="/assets/Pixel True Mockup 1.png" alt="Um monitor e um celular com o alura plus" class="secundario__imagem">
+        <img src="./assets/Pixel True Mockup 1.png" alt="Um monitor e um celular com o alura plus" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. 
@@ -38,12 +38,12 @@
                 onde e como quiser.</p>
             <a href="www.alura.com.br" class="container__botao secundario__botao">Assine o Combo+</a>
         </div>
-        <img src="/assets/Telas.png" alt="tela do alura plus e do alura lingua" class="secundario__imagem">
+        <img src="./assets/Telas.png" alt="tela do alura plus e do alura lingua" class="secundario__imagem">
 
     </section>
 
     <section class="container secundario">
-        <img src="/assets/Notebook.png" class="secundario__imagem">
+        <img src="./assets/Notebook.png" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo 
@@ -56,22 +56,22 @@
         <h2 class="titulo__grande">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="/assets/tv.png">
+                <img src="./assets/tv.png">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="/assets/computador.png">
+                <img src="./assets/computador.png">
                 <h3 class="lista__item">Computadores</h3>
             </li>
             <li>
-                <img src="/assets/celular.png">
+                <img src="./assets/celular.png">
                 <h3 class="lista__item">Celulares e tablets</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="/assets/Logo.png" alt="rodape" class="rodape__logo">
+        <img src="./assets/Logo.png" alt="rodape" class="rodape__logo">
         <ul class="rodape__lista">
             
             <li class="lista__link">
